--- a/rss/styles.css
+++ b/rss/styles.css
@@ -142,12 +142,15 @@ input:checked + .slider:before {
 
 .search-container {
     margin-bottom: 20px;
+    display: flex;
+    width: 100%;
 }
 
 #search-input {
+    flex-grow: 1;
     padding: 10px;
-    width: 70%;
     border: 1px solid #ddd;
+    border-right: none;
     border-radius: 5px 0 0 5px;
 }
 
