--- a/map/styles.css
+++ b/map/styles.css
@@ -5,19 +5,7 @@ body, html {
 }
 
 #map {
-    height: 90%;
-}
-
-#controls {
-    height: 10%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #f0f0f0;
-}
-
-#simulateBtn {
-    margin-right: 20px;
+    height: 100%;
 }
 
 #info {
@@ -32,6 +20,20 @@ body, html {
     border-radius: 5px;
 }
 
+.info {
+    padding: 6px 8px;
+    font: 14px/16px Arial, Helvetica, sans-serif;
+    background: white;
+    background: rgba(255,255,255,0.8);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 5px;
+}
+
+.info h4 {
+    margin: 0 0 5px;
+    color: #777;
+}
+
 .population-label {
     background: rgba(255, 255, 255, 0.7);
     border: none;
@@ -40,4 +42,21 @@ body, html {
     font-weight: bold;
     text-align: center;
     line-height: 20px;
+}
+
+.legend {
+    line-height: 18px;
+    color: #555;
+}
+
+.legend i {
+    width: 18px;
+    height: 18px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
+}
+
+.legend h4 {
+    margin-top: 0;
 }
