--- a/nonogram/styles.css
+++ b/nonogram/styles.css
@@ -31,7 +31,7 @@ h1 {
 
 #grid-container {
     display: grid;
-    grid-template-columns: repeat(20, 21px);
+    grid-template-columns: repeat(10, 30px);
     grid-gap: 1px;
     background-color: #ddd;
     padding: 1px;
@@ -39,8 +39,8 @@ h1 {
 }
 
 .cell {
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     background-color: white;
     border: 1px solid #bbb;
     cursor: pointer;
@@ -63,20 +63,20 @@ h1 {
 }
 
 #row-hints {
-    width: 50px;
+    width: 60px;
     margin-right: 10px;
 }
 
 #col-hints {
     display: grid;
-    grid-template-columns: repeat(20, 21px);
-    height: 50px;
+    grid-template-columns: repeat(10, 30px);
+    height: 60px;
     margin-bottom: 10px;
-    margin-left: 60px;
+    margin-left: 70px;
 }
 
 .hint, .col-hint {
-    font-size: 10px;
+    font-size: 12px;
     color: #7f8c8d;
     display: flex;
     align-items: center;
@@ -84,10 +84,17 @@ h1 {
 }
 
 .col-hint {
-    justify-content: center;
+    font-size: 12px;
+    color: #7f8c8d;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    height: 60px;
     writing-mode: vertical-rl;
     text-orientation: upright;
-    height: 50px;
+    padding: 5px 0;
+    text-align: center;
 }
 
 button {
